# dotctl

./: .coveragerc  .dockerignore  .env  .env.test  .gitignore  .mypy.ini  .style.yapf  Dockerfile  MANIFEST.in  Makefile  Pipfile  README.md  SECURITY.md  TODO.md  pyproject.toml  setup.py  sonar-project.properties
.github/actions/build-test/: action.bash  action.yml
.github/actions/run-test/: action.bash  action.yml
.github/workflows/: integration.yml
src/dotctl/: __init__.py  context.py  manager.py  platform.py  privileges.py
src/dotctl/cmd/: dotctl.py  dotfiles.py  dotrun.py  dotsecrets.py
src/dotctl/installers/: __init__.py  golang.py  helm.py  homebrew.py  installer.py  krew.py  macappstore.py  node.py  python.py  rust.py  vscode.py
src/dotctl/scripts/: __init__.py  binary.py  messages.py  packages.py  setup.py
tests/: conftest.py  context_test.py  dotctl_test.py  dotfiles_test.py  platform_test.py  scripts_test.py
tests/dotfiles/.setup.d/: 00-echo.py  00-noop.py  00-privileged.py  11-cask.py
tests/fixtures/: bin_mock.py  script_output.py  script_process.py
tests/helpers/: setup_script.py
tests/installers/: homebrew_test.py
